--- a/index.html
+++ b/index.html
@@ -10,6 +10,20 @@
 <body>
     <h1>Rich People Wealth Board</h1>
 
+    <div class="container">
+        <aside>
+            <button id="add_user">Add User</button>
+            <button id="double">Double</button>
+            <button id="show_millionaries">Show Only Millionaires</button>
+            <button id="sort">Short By Richest</button>
+            <button id="calculate_weath">Calculate Enter Wealth</button>
+        </aside>
+
+        <main id="main">
+            <h2><strong>Person</strong> Wealth</h2>
+        </main>
+    </div>
+
 
 
     <script src="./script.js"></script>
